stop screen jumping

--- a/css/style.css
+++ b/css/style.css
@@ -8,14 +8,7 @@ body{
   justify-content: center;
   align-items: center;
 }
-.container {
-  width: 100%;
-  border: 10px solid red;
-  margin: auto;
-  padding-left: 100px;
-  overflow: hidden;
 
-}
 #board {
 display: grid;
 grid-template-rows: repeat(10, 5vmin);
@@ -31,6 +24,7 @@ border: 1px solid black;
 
 .apple {
   background-color: red;
+  border-radius: 50%;
 }
 
 .snake{
